omni/tests/goldens/types/unknown_type_10.err
tests/goldens/types/unknown_type_10.omni:1:13: error: unknown type "Mystery10"
     1 | let value10:Mystery10 = 1
       |             ^^^^^^^^^
     2 | 
  hint: import or declare the type before use

tests/goldens/types/unknown_type_10.omni:1:1: error: type mismatch: cannot assign int to Mystery10
     1 | let value10:Mystery10 = 1
       | ^^^^^^^^^^^^^^^^^^^^^^^^^
     2 | 
  hint: convert the expression to Mystery10 or change the variable type to int
